--- a/test/lit.cfg.in
+++ b/test/lit.cfg.in
@@ -10,6 +10,8 @@ config.test_format = lit.formats.ShTest(True)
 config.test_source_root = "@CMAKE_CURRENT_SOURCE_DIR@"
 config.test_exec_root = "@CMAKE_CURRENT_BINARY_DIR@"
 
+config.environment['PATH'] = os.pathsep.join(["@LLVM_TOOLS_BINARY_DIR@"] + [ config.environment['PATH'] ])
+
 runtime_lib = os.path.basename("@EASY_JIT_RUNTIME@").split('.')[0].replace("lib", "", 1)
 runtime_lib_path = os.path.dirname("@EASY_JIT_RUNTIME@")
 
