Cmake options added

--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-llvm_map_components_to_libnames(LLVM_LIBS Support Core)
+llvm_map_components_to_libnames(LLVM_LIBS Core Support)
 
 add_llvm_loadable_module(easy_jit_pass
   src/extract.cpp
   src/identify.cpp
   src/declare.cpp)
 
-target_link_libraries(easy_jit_pass PUBLIC ${LLVM_LIBS})
+target_link_libraries(easy_jit_pass ${LLVM_LIBS})
 
 set(EASY_JIT_PASS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/easy_jit_pass${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
