--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -17,9 +17,7 @@ runtime_lib_dir = os.path.dirname("@EASY_JIT_RUNTIME@")
 llvm_lib_dir = os.path.join(os.path.dirname("@LLVM_TOOLS_BINARY_DIR@"), "lib")
 
 includes = ["cpplib", "runtime"]
-include_flags = ""
-for dir in includes :
-  include_flags += "-I\'" + os.path.join("@EASY_JIT_ROOT@", dir, "include") + "\' "
+include_flags = " ".join(["-I'" + dir + "'" for dir in "@LLVM_INCLUDE_DIRS@".split()] + ["-I'" + os.path.join("@EASY_JIT_ROOT@", dir, "include") + "'" for dir in includes] )
 
 ld_paths = [runtime_lib_dir, llvm_lib_dir]
 ld_flags = "-l" + runtime_lib
