--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -8,5 +8,5 @@ add_library(EasyJitRuntime SHARED
 
 target_link_libraries(EasyJitRuntime ${RUNTIME_LLVM_LIBS})
 
-set(EASY_JIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/EasyJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
+set(EASY_JIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libEasyJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
 
