Getting closer to a working version

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,9 +1,10 @@
-llvm_map_components_to_libnames(RUNTIME_LLVM_LIBS ExecutionEngine TransformUtils ipo Core)
+llvm_map_components_to_libnames(RUNTIME_LLVM_LIBS all)
 
 add_library(EasyJitRuntime SHARED
   Function.cpp
   BitcodeTracker.cpp
   Context.cpp
+  InitNativeTarget.cpp
 )
 
 target_link_libraries(EasyJitRuntime ${RUNTIME_LLVM_LIBS})
