--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -20,9 +20,13 @@ includes = ["cpplib", "runtime"]
 include_flags = " ".join(["-I'" + dir + "'" for dir in "@LLVM_INCLUDE_DIRS@".split()] + ["-I'" + os.path.join("@EASY_JIT_ROOT@", dir, "include") + "'" for dir in includes] )
 
 ld_paths = [runtime_lib_dir, llvm_lib_dir]
-ld_flags = "-l" + runtime_lib
+ld_flags = ""
 for ld_path in ld_paths:
   ld_flags = ld_flags + " -L'" + ld_path + "' -rpath '" + ld_path + "' "
+
+ld_flags = ld_flags + " -l" + runtime_lib
+ld_flags = ld_flags + " -lLLVMSupport" #TODO: I don't know why I have to pass Support here. It should not be required.
+
 
 
 # substitutions
