Runtime execution of passes.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,10 +1,12 @@
 llvm_map_components_to_libnames(RUNTIME_LLVM_LIBS all)
 
 add_library(EasyJitRuntime SHARED
+  InitNativeTarget.cpp
   Function.cpp
   BitcodeTracker.cpp
+  pass/InlineParameters.cpp
+  pass/ContextAnalysis.cpp
   Context.cpp
-  InitNativeTarget.cpp
 )
 
 target_link_libraries(EasyJitRuntime ${RUNTIME_LLVM_LIBS})
