Readme + helper scripts
CMake for the example, and test it simulating the user's keystrokes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(runtime)
 
 add_custom_target(easy-jit-core DEPENDS EasyJitPass EasyJitRuntime)
 
+add_subdirectory(doc)
 add_subdirectory(benchmark)
 
 include(CMakeTests.txt)
