--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
             - llvm-5.0-dev
             - llvm-5.0-tools
             - clang-5.0
+            - libopencv-dev 
 
 before_install:
     - pip install --user lit
@@ -19,5 +20,5 @@ before_install:
 script:
   - mkdir _build && cd _build 
   - git clone https://github.com/google/benchmark.git && git clone https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake -DCMAKE_INSTALL_PREFIX=`pwd`/../_install .. -GNinja && ninja && ninja install && cd ../..
-  - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install .. -G Ninja && ninja && ninja check
+  - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install .. -G Ninja && ninja && ninja check
 
