--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
             - llvm-toolchain-trusty-5.0
 
         packages:
+            - ninja-build 
             - g++-6
             - llvm-5.0-dev
             - llvm-5.0-tools
@@ -16,5 +17,7 @@ before_install:
     - pip install --user lit
 
 script:
-  - mkdir _build && cd _build && cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 .. && make check
+  - mkdir _build && cd _build 
+  - git clone https://github.com/google/benchmark.git && git clone https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake -DCMAKE_INSTALL_PREFIX=`pwd`/../_install .. -GNinja && ninja && ninja install && cd ../..
+  - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install .. -G Ninja && ninja && ninja check
 
