--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_llvm_loadable_module(EasyJitPass
   RegisterPasses.cpp
-  Easy.cpp)
+  Easy.cpp
+  MayAliasTracer.cpp
+  )
 
 set(EASY_JIT_PASS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/EasyJitPass${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
