Support just-in-time devirtualization of virtual calls

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -1,12 +1,13 @@
 llvm_map_components_to_libnames(RUNTIME_LLVM_LIBS core codegen interpreter support mcjit native executionengine passes objcarcopts)
 
 add_library(EasyJitRuntime SHARED
-  pass/InlineParameters.cpp
-  pass/ContextAnalysis.cpp
-  InitNativeTarget.cpp
-  Function.cpp
   BitcodeTracker.cpp
   Context.cpp
+  Function.cpp
+  InitNativeTarget.cpp
+  pass/ContextAnalysis.cpp
+  pass/DevirtualizeConstant.cpp
+  pass/InlineParameters.cpp
 )
 
 target_link_libraries(EasyJitRuntime ${RUNTIME_LLVM_LIBS})
