cmake install scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
 script:
   - mkdir _build && cd _build 
   - git clone https://github.com/google/benchmark.git && git clone https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake .. -GNinja -DCMAKE_INSTALL_PREFIX=`pwd`/../_install && ninja && ninja install && cd ../..
-  - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install .. -G Ninja
+  - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install -DCMAKE_INSTALL_PREFIX=`pwd`/../_install .. -G Ninja
   - ninja
+  - ninja install
   - ninja check
 
