--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -5,3 +5,6 @@ add_llvm_loadable_module(EasyJitPass
   )
 
 set(EASY_JIT_PASS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/EasyJitPass${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
+
+install(TARGETS EasyJitPass
+        LIBRARY DESTINATION lib)
