--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -14,3 +14,5 @@ target_link_libraries(EasyJitRuntime ${RUNTIME_LLVM_LIBS})
 
 set(EASY_JIT_RUNTIME ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libEasyJitRuntime${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
 
+install(TARGETS EasyJitRuntime 
+        LIBRARY DESTINATION lib)
