--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
 set(EASY_JIT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory(cpplib)
 add_subdirectory(pass)
 add_subdirectory(runtime)
 
