Proper REQUIRE*S* usage

--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -46,5 +46,6 @@ config.substitutions.append(('%FileCheck', os.path.join("@LLVM_TOOLS_BINARY_DIR@
 
 if "@EASY_JIT_BENCHMARK@" in ["1", "ON"] :
   config.available_features.add('benchmark')
-if "@CMAKE_INSTALL_PREFIX@" :
+
+if "@CMAKE_INSTALL_PREFIX@" and os.path.exists(os.path.join("@CMAKE_INSTALL_PREFIX@", "include", "easy")):
   config.available_features.add('install')
