Serialization/Deserialization of bitcode to std::ostream/std::istream

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(EasyJitRuntime SHARED
   Context.cpp
   Function.cpp
   InitNativeTarget.cpp
+  Utils.cpp
   pass/ContextAnalysis.cpp
   pass/DevirtualizeConstant.cpp
   pass/InlineParameters.cpp
