--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ addons:
             - libopencv-dev 
 
 before_install:
-    - pip install --upgrade pip
+    - pip install --user --upgrade pip
     - pip install --user lit
 
 script:
   - mkdir _build && cd _build 
-  - git clone https://github.com/google/benchmark.git && git clone https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake .. -GNinja -DCMAKE_INSTALL_PREFIX=`pwd`/../_install && ninja && ninja install && cd ../..
+  - git clone --depth=1 https://github.com/google/benchmark.git && git clone --depth=1 https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake .. -GNinja -DCMAKE_INSTALL_PREFIX=`pwd`/../_install && ninja && ninja install && cd ../..
   - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install -DCMAKE_INSTALL_PREFIX=`pwd`/../_install .. -G Ninja
   - ninja
   - ninja install
