Move cpplib/include to include . Renamo few methods on Context.h.
Simplified easy::Context constructor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include(Python)
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
-include_directories(cpplib/include)
+include_directories(include)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -24,7 +24,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(EASY_JIT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(cmake)
-add_subdirectory(cpplib)
+add_subdirectory(include)
 add_subdirectory(pass)
 add_subdirectory(runtime)
 
