--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,5 @@ add_subdirectory(doc)
 add_subdirectory(benchmark)
 
 include(CMakeTests.txt)
+
+configure_file("${EASY_JIT_ROOT}/misc/easycc.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc")
