fix dynamic linking issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,4 @@ add_subdirectory(benchmark)
 include(CMakeTests.txt)
 
 configure_file("${EASY_JIT_ROOT}/misc/easycc.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc")
+install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc DESTINATION bin)
