--- a/misc/easycc.in
+++ b/misc/easycc.in
@@ -3,7 +3,9 @@
 set -x
 set -e
 
-${CMAKE_CXX_COMPILER} --std=c++${CMAKE_CXX_STANDARD} "$@" \
+${CMAKE_CXX_COMPILER} --std=c++${CMAKE_CXX_STANDARD} \
   -Xclang -load -Xclang ${CMAKE_INSTALL_PREFIX}/lib/EasyJitPass.so \
   -I${CMAKE_INSTALL_PREFIX}/include \
-  -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime
+  -Wl,-rpath,'${CMAKE_INSTALL_PREFIX}/lib' \
+  -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime \
+  "$@"
