--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,4 +41,5 @@ add_subdirectory(benchmark)
 include(CMakeTests.txt)
 
 configure_file("${EASY_JIT_ROOT}/misc/easycc.in" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc")
-install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc DESTINATION bin)
+install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/easycc DESTINATION bin
+PERMISSIONS OWNER_EXECUTE OWNER_READ )
