--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: cpp
 
+notifications:
+  email:
+    on_success: never # default: change
+    on_failure: always # default: always
+
 addons:
     apt:
         sources:
@@ -7,22 +12,21 @@ addons:
             - llvm-toolchain-trusty-5.0
 
         packages:
-            - ninja-build 
+            - ninja-build
             - g++-6
             - llvm-5.0-dev
             - llvm-5.0-tools
             - clang-5.0
-            - libopencv-dev 
+            - libopencv-dev
 
 before_install:
     - pip install --user --upgrade pip
     - pip install --user lit
 
 script:
-  - mkdir _build && cd _build 
+  - mkdir _build && cd _build
   - git clone --depth=1 https://github.com/google/benchmark.git && git clone --depth=1 https://github.com/google/googletest.git benchmark/googletest && mkdir benchmark/_build && cd benchmark/_build && cmake .. -GNinja -DCMAKE_INSTALL_PREFIX=`pwd`/../_install && ninja && ninja install && cd ../..
   - cmake -DLLVM_DIR=/usr/lib/llvm-5.0/cmake -DCMAKE_CXX_COMPILER=clang++-5.0 -DCMAKE_C_COMPILER=clang-5.0 -DEASY_JIT_EXAMPLE=ON -DEASY_JIT_BENCHMARK=ON -DBENCHMARK_DIR=`pwd`/benchmark/_install -DCMAKE_INSTALL_PREFIX=`pwd`/../_install .. -G Ninja
   - ninja
   - ninja install
   - ninja check
-
