--- a/misc/easycc.in
+++ b/misc/easycc.in
@@ -3,7 +3,7 @@
 set -e
 set -x
 
-${CMAKE_CXX_COMPILER} --std=c++${CMAKE_CXX_STANDARD} \
+${CMAKE_CXX_COMPILER} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
   -Xclang -load -Xclang ${CMAKE_INSTALL_PREFIX}/lib/EasyJitPass.so \
   -I${CMAKE_INSTALL_PREFIX}/include \
   -Wl,-rpath,'${CMAKE_INSTALL_PREFIX}/lib' \
