adding a tunable inliner

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,2 +1,4 @@
 install(DIRECTORY easy
         DESTINATION include FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY tuner
+        DESTINATION include FILES_MATCHING PATTERN "*.h")
