--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(EasyJitRuntime SHARED
   pass/ContextAnalysis.cpp
   pass/DevirtualizeConstant.cpp
   pass/InlineParameters.cpp
+  tuner/TunableInliner.cpp
 )
 
 llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
