in-progress attempt to not expose LLVM things in optimizer.h

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(EasyJitRuntime SHARED
   pass/DevirtualizeConstant.cpp
   pass/InlineParameters.cpp
   tuner/TunableInliner.cpp
+  tuner/Optimizer.cpp
 )
 
 llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
