just include some LLVM headers instead of trying to allocate an object with incomplete member type defs

--- a/misc/easycc.in
+++ b/misc/easycc.in
@@ -5,6 +5,7 @@ set -x
 
 ${CMAKE_CXX_COMPILER} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
   -Xclang -load -Xclang ${CMAKE_INSTALL_PREFIX}/lib/EasyJitPass.so \
+  -I${LLVM_INCLUDE_DIRS} \
   -I${CMAKE_INSTALL_PREFIX}/include \
   -Wl,-rpath,'${CMAKE_INSTALL_PREFIX}/lib' \
   -L${CMAKE_INSTALL_PREFIX}/lib -lEasyJitRuntime \
