tuners may now analyze the module before generating a config

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(EasyJitRuntime SHARED
   pass/InlineParameters.cpp
   tuner/TunableInliner.cpp
   tuner/Optimizer.cpp
+  tuner/AnalyzingTuner.cpp
 )
 
 llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
