fixing up the naming scheme for loops <--> knobs

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(EasyJitRuntime SHARED
   tuner/TunableInliner.cpp
   tuner/Optimizer.cpp
   tuner/AnalyzingTuner.cpp
+  tuner/LoopKnob.cpp
 )
 
 llvm_config(EasyJitRuntime core codegen interpreter support mcjit native executionengine passes objcarcopts)
