--- a/misc/easycc.in
+++ b/misc/easycc.in
@@ -3,7 +3,7 @@
 set -e
 set -x
 
-${CMAKE_CXX_COMPILER} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
+${CLANGXX_BIN} -Xclang -disable-O0-optnone --std=c++${CMAKE_CXX_STANDARD} \
   -Xclang -load -Xclang ${CMAKE_INSTALL_PREFIX}/lib/EasyJitPass.so \
   -I${LLVM_INCLUDE_DIRS} \
   -I${CMAKE_INSTALL_PREFIX}/include \
