should specify the plugin tool is clang

--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -3,6 +3,8 @@ add_llvm_loadable_module(EasyJitPass
   Easy.cpp
   MayAliasTracer.cpp
   LoopNamer.cpp
+  PLUGIN_TOOL
+  clang
   )
 
 set(EASY_JIT_PASS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/EasyJitPass${CMAKE_SHARED_LIBRARY_SUFFIX} PARENT_SCOPE)
