--- a/tests/lit.cfg.in
+++ b/tests/lit.cfg.in
@@ -2,7 +2,7 @@ import lit.formats
 import lit.util
 import os
 
-config.name = 'easy_jit'
+config.name = 'atJIT'
 config.suffixes = ['.c', '.cpp', '.ll', '.test']
 
 config.test_format = lit.formats.ShTest(True)
@@ -33,7 +33,7 @@ config.substitutions.append(('%llvm_tools_dir', "@LLVM_TOOLS_BINARY_DIR@"))
 
 common_flags =  "-g -Xclang -disable-O0-optnone "
 
-config.substitutions.append(('%easycc', "@CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/easycc"))
+config.substitutions.append(('%atjitc', "@CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/atjitc"))
 
 config.substitutions.append(('%clangxx', os.path.join("@LLVM_TOOLS_BINARY_DIR@", "clang++")))
 config.substitutions.append(('%clang', os.path.join("@LLVM_TOOLS_BINARY_DIR@", "clang")))
