exportConfig should be working now
- an interesting issue we ran into was the module-specific uniqueness
  if the KnobTicker. This was solved by delcaring it extern and
  initializing it once in its own teeny cpp file.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(EasyJitRuntime SHARED
   tuner/LoopSettingGen.cpp
   tuner/KnobConfig.cpp
   tuner/KnobSet.cpp
+  tuner/Statics.cpp
 )
 
 # the installed version of the library needs to
