--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -2,7 +2,7 @@ option(EASY_JIT_BENCHMARK "Enable benchmarking" OFF)
 
 if(EASY_JIT_BENCHMARK)
     set(CMAKE_CXX_COMPILER ${LLVM_TOOLS_BINARY_DIR}/clang++)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EASY_JIT_PASS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Xclang -disable-O0-optnone -Xclang -load -Xclang ${EASY_JIT_PASS}")
 
     add_executable(easyjit-benchmark benchmark.cpp)
     add_dependencies(easyjit-benchmark easy-jit-core)
